--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "sass": "^1.38.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "babel-jest": "^27.1.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.1"
+    "eslint-config-next": "11.1.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.1.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
