--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "11.1.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.1.0",
+    "jest-fetch-mock": "^3.0.3",
     "react-test-renderer": "^17.0.2"
   }
 }
