--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "11.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
