--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "cypress": "cypress run --project __e2e__",
+    "start-server": "yarn run build && yarn run start",
+    "test:e2e": "start-server-and-test start-server http://localhost:3001 cypress"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -21,11 +24,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "babel-jest": "^27.1.0",
+    "cypress": "^8.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.1.0",
     "jest-fetch-mock": "^3.0.3",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "start-server-and-test": "^1.13.1"
   }
 }
